Project clean up
For some reason project didn't work out of the box (preview not working, ios, android and browser projects
not building).
Thankfully opening project in Visual Studio allowed to solve the issues painlessly (basically there was prompt
for everything).

--- a/src/Hydrogen/Hydrogen.Browser/Hydrogen.Browser.csproj
+++ b/src/Hydrogen/Hydrogen.Browser/Hydrogen.Browser.csproj
@@ -7,14 +7,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <WasmExtraFilesToDeploy Include="AppBundle\**"/>
+        <WasmExtraFilesToDeploy Include="AppBundle\**" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia.Browser" Version="$(AvaloniaVersion)"/>
+        <PackageReference Include="Avalonia.Browser" Version="11.0.0-preview6" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Hydrogen\Hydrogen.csproj"/>
+        <ProjectReference Include="..\Hydrogen\Hydrogen.csproj" />
     </ItemGroup>
 </Project>
