--- a/src/Hydrogen/Hydrogen.Desktop/Hydrogen.Desktop.csproj
+++ b/src/Hydrogen/Hydrogen.Desktop/Hydrogen.Desktop.csproj
@@ -13,12 +13,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia.Desktop" Version="$(AvaloniaVersion)"/>
+        <PackageReference Include="Avalonia.Desktop" Version="11.0.0-preview6" />
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="$(AvaloniaVersion)"/>
+        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.0-preview6" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Hydrogen\Hydrogen.csproj"/>
+        <ProjectReference Include="..\Hydrogen\Hydrogen.csproj" />
     </ItemGroup>
 </Project>
