--- a/src/Hydrogen/Hydrogen/Hydrogen.csproj
+++ b/src/Hydrogen/Hydrogen/Hydrogen.csproj
@@ -4,6 +4,7 @@
         <Nullable>enable</Nullable>
         <LangVersion>latest</LangVersion>
         <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
+        <WarningsAsErrors>true</WarningsAsErrors>
     </PropertyGroup>
 
 
