--- a/src/Hydrogen/Hydrogen/Hydrogen.csproj
+++ b/src/Hydrogen/Hydrogen/Hydrogen.csproj
@@ -19,6 +19,7 @@
         <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.0-preview6" />
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0-preview2" />
         <PackageReference Include="Serilog" Version="3.0.0-dev-01958" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="4.1.1-dev-00910" />
         <PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
     </ItemGroup>
 
